--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.1",
     "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "mongodb": "^2.1.16",
-    "mongoose": "^4.4.12",
     "express": "~4.15.5",
     "express-session": "^1.7.6",
+    "mongodb": "^2.2.33",
+    "mongoose": "^4.13.2",
     "morgan": "~1.9.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
